Fix for the modal popup width size and overlay z-index (#237)

--- a/src/hocs/style.css
+++ b/src/hocs/style.css
@@ -104,5 +104,5 @@
 }
 
 .bm-menu-wrap {
-  z-index: 998;
+  z-index: 999 !important;
 }
